# practris

./: Cargo.toml  README.md
src/: app.rs  config.rs  game.rs  game_ui.rs  input.rs  lib.rs  main.rs  model.rs  singleplayer.rs  util.rs
src/ui/: game_ui.rs  skin.rs
