[package]
name = "zersis"
version = "0.1.0"
authors = ["Ridan Vandenbergh <ridanvandenbergh@gmail.com>"]
edition = "2021"
rust-version = "1.56"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
eframe = { version = "0.16.0", features = ["persistence"] }
libtetris = { git = "https://github.com/MinusKelvin/cold-clear" }
rand = "0.7"
rand_pcg = "0.2"
ordered-float = { version = "2.10", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
gilrs = { version = "0.8", features = ["serde-serialize"] }
log = "0.4"
env_logger = "0.9"
arrayvec = { version = "0.5", features = ["serde"] }

[profile.release]
opt-level = 2 # fast and small wasm