[package]
name = "practris"
version = "0.1.0"
authors = ["Ridan Vandenbergh <ridanvandenbergh@gmail.com>"]
edition = "2021"
rust-version = "1.56"

[dependencies]
nannou = "0.18"
nannou_egui = "0.5"
winit = { version = "0.25", features = ["serde"] }
libtetris = { path = "/home/ridan/IdeaProjects/cold-clear/libtetris" }
rand = "0.7"
rand_pcg = "0.2"
ordered-float = { version = "2.10", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
ron = "^0.7"
gilrs = { version = "0.8", features = ["serde-serialize"] }
log = "0.4"
env_logger = "0.9"
arrayvec = { version = "0.5", features = ["serde"] }
dirs = "4"

[profile.release]
opt-level = 2 # fast and small wasm